# DormDB

./: .env.example  .env.example.secure  .gitignore  API文档.md  Cargo.toml  LICENSE  MYSQL_SECURITY.md  README.md  README_EN.md  generate_admin_hash.rs  test_api.sh  test_security.sh  部署指南.md  项目手册.md  项目描述.md
src/: lib.rs  main.rs
src/api/: mod.rs
src/auth/: mod.rs
src/config/: mod.rs
src/database/: mod.rs
src/models/: mod.rs
src/routes/: mod.rs  static_files.rs
src/services/: mod.rs
src/utils/: mod.rs
static/: 404.html  _payload.json  admin.html  app.js  demo.html  index.html
static/_nuxt/: 545FZM-Y.js  A_pVwG5k.js  B0SWRN7n.js  B2oReAV0.js  B8hgkoEJ.js  BCfF5pEf.js  BP4a50uv.js  BPnSQfJf.js  BV2ftzQ1.js  B_vDv261.js  BeQt8jzg.js  BnL1Hu2L.js  BocV1pTQ.js  Btoyhf3p.js  BwY6AjUB.js  C59ZDKiW.js  C6ijD7c3.js  CBI1ubKW.js  CELlox2R.js  CHvCcL-2.js  CNTGVcr3.js  CPnoqY1H.js  CX-UL3wi.js  ClUn-p3Y.js  CnTPp6tX.js  CnmpC8Jn.js  CpcrmZcf.js  CxX7pazU.js  D4eMZqxZ.js  D9QxU12H.js  DMe3A4Sv.js  DPQ8EQO2.js  DSW05qkb.js  DYgDmyYy.js  DgQwQWpy.js  K4DDSHXz.js  Mk82QflD.js  UuX0VwB7.js  f-SsayYv.js  ilrYA22Q.js  (+1 more)
static/_nuxt/builds/: latest.json
static/_nuxt/builds/meta/: 789def59-c720-4af0-be6c-8dc0ba060ea7.json  7ca6207c-afc1-4e56-9f45-f613c555c683.json  ac2d4f6e-9d8e-4a80-b159-409c621cad96.json
static/admin/dashboard/: index.html
static/admin/login/: _payload.json  index.html
static/admin/students/: _payload.json  index.html
static/assets/: custom.css
static/user/profile/: _payload.json  index.html
